--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,16 +14,18 @@ services:
     networks:
       - springboot_network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      interval: 10s
       retries: 3
+      start_period: 40s
       timeout: 5s
-      start_period: 10s
   app:
     build:
       context: .
     container_name: mobile_app
     ports:
       - "8080:8080"
+      - "5005:5005"
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/server_mobile
       SPRING_DATASOURCE_USERNAME: root
