refactor all Id

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,22 +19,22 @@ services:
       retries: 3
       start_period: 40s
       timeout: 5s
-  app:
-    build:
-      context: .
-    container_name: mobile_app
-    ports:
-      - "8080:8080"
-      - "5005:5005"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/server_mobile
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-      JWT_SECRET: sSkEW/7r25YJQCRBw9LEsCg4/yWv3FDKNCMptG5tUnYq7MdkNz+9saUMmCSENl5Y
-    depends_on:
-      - mysql
-    networks:
-      - springboot_network
+#  app:
+#    build:
+#      context: .
+#    container_name: mobile_app
+#    ports:
+#      - "8080:8080"
+#      - "5005:5005"
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/server_mobile
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: root
+#      JWT_SECRET: sSkEW/7r25YJQCRBw9LEsCg4/yWv3FDKNCMptG5tUnYq7MdkNz+9saUMmCSENl5Y
+#    depends_on:
+#      - mysql
+#    networks:
+#      - springboot_network
 
 networks:
   springboot_network:
